The TransactionEstimator is now thread-safe (locked at the MarkovGraph-level). This reduces the processing time for calculating MarkovCostModel accuracies from a couple hours to about five minutes. Where is your god now?
git-svn-id: https://database.cs.brown.edu/svn/hstore/branches/markov-branch@1938 7a8f3d5b-8c5f-44cb-9125-2414a256df87